MDEV-14082 Enforcing innodb_open_files leads to fil_system->mutex problem

fil_mutex_enter_and_prepare_for_io(): Reacquire fil_system->mutex after
failing to close a file and before retrying.